<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_promedio"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_medium" />

        <EditText
            android:id="@+id/etNombreEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_estudiante"
            android:inputType="textPersonName"
            android:layout_marginBottom="@dimen/margin_small" />

        <EditText
            android:id="@+id/etNota1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota1"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_small" />

        <EditText
            android:id="@+id/etNota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota2"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_small" />

        <EditText
            android:id="@+id/etNota3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota3"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_small" />

        <EditText
            android:id="@+id/etNota4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota4"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_small" />

        <EditText
            android:id="@+id/etNota5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota5"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_medium" />

        <Button
            android:id="@+id/btnCalcularPromedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular"
            android:layout_marginBottom="@dimen/margin_medium" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body_size"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>
</ScrollView>