<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_medium">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_menu"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_large" />

    <Button
        android:id="@+id/btnEjercicio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ejercicio1"
        android:layout_marginBottom="@dimen/margin_medium" />

    <Button
        android:id="@+id/btnEjercicio2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ejercicio2"
        android:layout_marginBottom="@dimen/margin_medium" />

    <Button
        android:id="@+id/btnEjercicio3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ejercicio3" />

</LinearLayout>