<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_calculadora"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_medium" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_num1"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginBottom="@dimen/margin_small" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_num2"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginBottom="@dimen/margin_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_small">

        <Button android:id="@+id/btnSuma" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="+" />
        <Button android:id="@+id/btnResta" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="-" />
        <Button android:id="@+id/btnMulti" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="*" />
        <Button android:id="@+id/btnDiv" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="/" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_medium">

        <Button android:id="@+id/btnExpo" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="X^Y" />
        <Button android:id="@+id/btnRaiz" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="√X" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtResultadoCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_medium" />

</LinearLayout>